--- a/tester/build.gradle
+++ b/tester/build.gradle
@@ -1,5 +1,13 @@
 apply plugin: "java"
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile "commons-io:commons-io:2.5"
+}
+
 task run(type: JavaExec) {
 	classpath sourceSets.main.runtimeClasspath
 	main = "com.github.zachdeibert.ai3dapp.tester.Main"
