--- a/GoodVersion/app/src/main/AndroidManifest.xml
+++ b/GoodVersion/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.Material.Light">
+        android:theme="@style/Theme.AppCompat.Light">
         <activity android:name=".ServerSelect">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
